--- a/styles/edit-info.css
+++ b/styles/edit-info.css
@@ -293,6 +293,9 @@ form >input{
     outline: none;
     border: none;
 }
+form >input:hover{
+    cursor: pointer;
+}
 .creditos-div{
     width: 90%;
     height: 5vh;
