--- a/styles/index.css
+++ b/styles/index.css
@@ -64,6 +64,24 @@ form{
     align-items: center;
     gap: 15px;
 }
+#startCodingBtn{
+    border-radius: 8px;
+    background: var(--blue-1, #2F80ED);
+    width: 100%;
+    height: 38px;
+    color: #FFF;
+    text-align: center;
+    font-family: Noto Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    border: none;
+    transition: 0.4s;
+    border: 1px var(--blue-1, #2F80ED) solid ;
+}
+#startCodingBtn:hover{
+    cursor: pointer;
+}
 .input-div{
     width: 100%;
     height: 48px;
