--- a/styles/edit-info.css
+++ b/styles/edit-info.css
@@ -63,6 +63,27 @@
     overflow: hidden;
     border-radius: 5px;
 }
+#chg-pic{
+    width: 40px;
+    height: 40px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+#chg-pic >label{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(128, 128, 128, 0.5);
+}
+.img-container >label>span{
+    color: white;
+}
+.img-container >label:hover{
+    cursor: pointer;
+}
 .img-container:hover{
     cursor: pointer;
 }
